added some devise routes

--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -6,5 +6,8 @@
         - @project.errors.full_messages.each do |msg|
           %li= msg
 
+  = f.label :name 
+  = f.text_field :name
+
   .actions
     = f.submit 'Save'
