testing error on heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,5 +10,15 @@
 
 <%= yield %>
 
+<% if person_signed_in? %>
+  <li>
+  <%= link_to('Logout', destroy_person_session_path, :method => :delete) %>        
+  </li>
+<% else %>
+  <li>
+  <%= link_to('Login', new_person_session_path)  %>  
+  </li>
+<% end %>
+
 </body>
 </html>
