--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<div id="header_o">
+<div id="header_i">
+<h1>offbot</h1>
+</div>
+</div>
+
+<div id="container_o">
+<div id="container_i">
+
 <%= yield %>
 
 <% if person_signed_in? %>
@@ -19,6 +28,9 @@
   <%= link_to('Login', new_person_session_path)  %>  
   </li>
 <% end %>
+
+</div>
+</div>
 
 </body>
 </html>
