--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -65,7 +65,7 @@ h1, h2, h3, h4, p, ul {
 	margin: 0 0 20px 0;
 	padding: 10px 10px 5px 10px;
 	}
-#login_box .line {
+#login_box table {
 	margin: 0 10px 5px 10px;
 	}
 	
