--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,5 +1,7 @@
 %h1 New project
 
+%p Tell <span class="logotype">offbot</span> about your new project.
+
 = render 'form'
 
-= link_to 'Back', projects_path
+%p= link_to 'Cancel...', projects_path
