--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -2,7 +2,7 @@
 
 %p To introduce yourself to <span class="logotype">offbot</span> please fill in this simple form:
 
-#login_box
+#pop_box
 	= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
 		= devise_error_messages!
 		%table
