--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -6,6 +6,8 @@
 				- @project.errors.full_messages.each do |msg|
 					%li= msg
 
+	%h3 What's it called?
+
 	%table#new_project_name
 		%tr
 			%td.label= f.label :name 
