--- a/app/views/projects/my_index.html.haml
+++ b/app/views/projects/my_index.html.haml
@@ -13,4 +13,6 @@
 					%td.edit= link_to 'Edit', edit_project_path(project), :title => "Edit this Project"
 					%td.delete= link_to 'Delete', project, :confirm => 'Are you sure?', :method => :delete, :title => "Delete this Project"
 
-	%p= link_to 'New Project', new_project_path
+%p= link_to 'Create a new Project', new_project_path
+
+%p= link_to 'See all Projects', projects_path
