Edit/new project flow

--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -32,7 +32,4 @@
 			%td.label= label_tag "emails"
 			%td.field= text_field_tag "emails"
 
-	%table#new_project_submit
-		%tr
-			%td.label
-			%td.field= f.submit 'Create your new project!'
+	%p= f.submit 'Save this project'
