--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
 	%head
-		%title Offbott
+		%title Offbot
 		= stylesheet_link_tag    "application", :media => "all"
 		= javascript_include_tag "application"
 		= csrf_meta_tags
@@ -13,6 +13,8 @@
 				%h1 offbot
 				#header_login
 					- if person_signed_in?
+						= link_to 'Your Projects', root_url
+						&nbsp;
 						= link_to 'Logout', destroy_person_session_path, :method => :delete        
 					- else
 						= link_to 'Login', new_person_session_path 
