--- a/app/views/devise/_links.erb
+++ b/app/views/devise/_links.erb
@@ -3,15 +3,15 @@
 <% end -%>
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <p><%= link_to "Register with offbot", new_registration_path(resource_name) %></p>
+  <p>If you've not met Offbott before you should <%= link_to "register a new account", new_registration_path(resource_name) %>.</p>
 <% end -%>
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' %>
-  <p><%= link_to "Forgot your password?", new_password_path(resource_name) %></p>
+  <p><%= link_to "Forgotten your password?", new_password_path(resource_name) %></p>
 <% end -%>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <p><%= link_to "Didn't receive confirmation instructions?", new_confirmation_path(resource_name) %></p>
+  <p><%= link_to "Haven't got your confirmation email?", new_confirmation_path(resource_name) %></p>
 <% end -%>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
