--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -1,6 +1,6 @@
-%h2 Forgot your password?
+%h2 Forgotten your password?
 
-%p That's OK. Even <span class="logotype">offbot</span> forgets things…
+%p That's OK. Even Offbott forgets things…
 
 #login_box
 	= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f|
