Added an about page but can't quite figure out how to include layouts

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,10 @@ body {
 	margin-right: 40px;
 	float: right;
 	}
+#header_i h1 a {
+	color: #fff;
+	text-decoration: none;
+	}
 #header_login {
 	float: left; 
 	}
