--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
 
 		#header_o
 			#header_i
-				%h1 offbott
+				%h1= link_to 'offbott', root_url
 				#header_login
 					- if person_signed_in?
 						= link_to 'Your Projects', root_url
@@ -18,6 +18,8 @@
 						= link_to 'Sign Out', destroy_person_session_path, :method => :delete        
 					- else
 						= link_to 'Sign In', new_person_session_path 
+						&nbsp;
+						= link_to 'Register', new_registration_path(resource_name)
 		
 		#container_o
 			#container_i
