About page and registration path fixes

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
 					- else
 						= link_to 'Sign In', new_person_session_path 
 						&nbsp;
-						= link_to 'Register', new_registration_path(resource_name)
+						= link_to 'Register', new_person_registration_path
 		
 		#container_o
 			#container_i
