removed cancan, implemented hacky and not very elegant but working permissions

--- a/app/views/people/edit.html.haml
+++ b/app/views/people/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing person
+%h1 Editing your account
 
 = render 'form'
 
-= link_to 'Show', @person
-\|
-= link_to 'Back', people_path
+= link_to 'Back', person_path(@person)
