--- a/app/views/people/_form.html.haml
+++ b/app/views/people/_form.html.haml
@@ -1,10 +1,18 @@
 = form_for @person do |f|
-  -if @person.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@person.errors.count, "error")} prohibited this person from being saved:"
-      %ul
-        - @person.errors.full_messages.each do |msg|
-          %li= msg
+	-if @person.errors.any?
+		#error_explanation
+			%h2= "#{pluralize(@person.errors.count, "error")} prohibited this project from being saved:"
+			%ul
+				- @person.errors.full_messages.each do |msg|
+					%li= msg
 
-  .actions
-    = f.submit 'Save'
+	%table#your_name
+		%tr
+			%td.label= f.label :name 
+			%td.field= f.text_field :name
+		%tr
+			%td.label= f.label :email 
+			%td.field= f.text_field :email
+		%tr
+			%td.label
+			%td.field= f.submit 'Save'
