--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -27,7 +27,11 @@
 							%p= update.created_at.strftime("%A %d %B")
 					#update
 						%p.body= update.body
-						%p.credit <span class="author">#{update.person.name}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
+						%p.credit 
+							<span class="author">#{update.person.name}</span> <span class="date">#{update.created_at.strftime("%I:%M %p")}</span>
+							- if update.editable_by?(current_person)
+								%span.edit= link_to 'Edit', edit_update_path(update)
+								%span.delete= link_to 'Delete', update, :confirm => 'Are you sure?', :method => :delete
 					- lastday = updateday	
 						
 	#project_col_right			
