devise to use the person's name instead of their email in conf email

--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,4 @@
-<p>Welcome <%= @resource.email %>!</p>
+<p>Hi <%= @resource.name %>, welcome to Offbott!</p>
 
 <p>To confirm your account just the link below:</p>
 
