--- a/app/views/projects/my_index.html.haml
+++ b/app/views/projects/my_index.html.haml
@@ -2,7 +2,9 @@
 
 - if @projects.empty?
 	%p <span class="logotype">offbot</span> doesn't know about any of your projects yet.
-	%p= link_to 'Tell <span class="logotype">offbot</span> about a new project', new_project_path
+	%p
+		= link_to(new_project_path) do 
+			Tell <span class="logotype">offbot</span> about a new project
 	
 - else
 	#pop_box
