--- a/app/views/projects/_form.html.haml
+++ b/app/views/projects/_form.html.haml
@@ -41,4 +41,11 @@
 			%td.label= label_tag "emails"
 			%td.field= text_field_tag "emails"
 
+	%table#new_project_weekly_digest
+		%tr
+			%td.label= f.label :weekly_digest_day, "On which day would you like to receive the weekly digest of all updates?"
+			%td.field
+				- weekdays = I18n.t 'date.day_names'
+				= select(:project, :weekly_digest_day, options_for_select(weekdays))
+
 	%p= f.submit 'Save this project'
