--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -4,6 +4,6 @@
 \|
 = link_to 'Back to my updates', updates_path
 \|
-= link_to @update.project.name, project_path(@update.project.name)
+= link_to @update.project.name, project_path(@update.project)
 \|
 = link_to 'Back to my projects', root_url
