when showing updates hide edit and delet links if person isn't an admin or doesn't own them

--- a/app/views/updates/tagged.html.haml
+++ b/app/views/updates/tagged.html.haml
@@ -6,8 +6,9 @@
 		%tr
 			%td= update.body
 			%td= link_to 'Show', update
-			%td= link_to 'Edit', edit_update_path(update)
-			%td= link_to 'Destroy', update, :confirm => 'Are you sure?', :method => :delete
+			- if update.editable_by?(current_person)
+				%td= link_to 'Edit', edit_update_path(update)
+				%td= link_to 'Destroy', update, :confirm => 'Are you sure?', :method => :delete
 
 %br
 
