--- a/app/views/updates/show.html.haml
+++ b/app/views/updates/show.html.haml
@@ -1,7 +1,8 @@
 %p= @update.body
 %p Added to project #{@update.project.name}
-= link_to 'Edit', edit_update_path(@update)
-\|
+- if @update.editable_by?(current_person)
+	= link_to 'Edit', edit_update_path(@update)
+	\|
 = link_to 'Back to my updates', updates_path
 \|
 = link_to @update.project.name, project_path(@update.project)
