--- a/app/views/request_update/request_update.html.haml
+++ b/app/views/request_update/request_update.html.haml
@@ -8,8 +8,10 @@
 		%p What have you been up to?
 		%p Offbott
 
+		%hr
+
 		%h2 Recently others involved with the project #{@project.name} said:
 
 		- @project.updates.order("created_at DESC").limit(3).each do |update|
 			%p #{update.body}
-			%p by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
+			%p{:style=>"border-bottom: 1px solid #cacaca;"} by #{update.person.name}, posted at #{update.created_at.strftime("%A %d %B")}
