--- a/app/views/projects/my_index.html.haml
+++ b/app/views/projects/my_index.html.haml
@@ -1,10 +1,10 @@
 %h1 Your projects
 
 - if @projects.empty?
-	%p <span class="logotype">offbot</span> doesn't know about any of your projects yet.
+	%p <span class="logotype">Offbot</span> doesn't know about any of your projects yet.
 	%p
 		= link_to(new_project_path) do 
-			Tell <span class="logotype">offbot</span> about a new project
+			Tell <span class="logotype">Offbot</span> about a new project
 	
 - else
 	#pop_box
