--- a/app/views/projects/new.html.haml
+++ b/app/views/projects/new.html.haml
@@ -1,6 +1,6 @@
 %h1 New project
 
-%p Tell <span class="logotype">offbot</span> about your new project.
+%p Tell <span class="logotype">Offbot</span> about your new project.
 
 = render 'form'
 
