--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,9 +23,9 @@
 		
 		#container_o
 			#container_i
-				- unless notice.to_s == ''
+				- unless notice.nil?
 					%p#notice= notice
-				- unless alert.to_s == ''
+				- unless alert.nil?
 					%p#alert= alert
 
 				= yield
