--- a/app/views/projects/edit.html.haml
+++ b/app/views/projects/edit.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form'
 
-%p= link_to 'Back to your project (without saving changes)', @project
+%p= link_to 'Cancel', @project, :class => 'cancel button'
